# praas-container

./: .gitignore  CMakeLists.txt  README.md  docker-compose-dev.yml  docker-compose-serving-dev.yml  docker-compose-serving-docker.yml  docker-compose.yml
cmake/: dependencies.cmake
deployment/conf/: haproxy.conf
docker/: aws-sdk-s3.dockerfile  build.sh  control_plane-dev.dockerfile  control_plane.dockerfile  cpp_builder.dockerfile  local_worker-dev.dockerfile  local_worker.dockerfile  runtime.dockerfile  serving-dev.dockerfile
examples/: CMakeLists.txt  config.json  example.cpp  memory.cpp
runtime/include/praas/: buffer.hpp  common.hpp  function.hpp  global_memory.hpp  messages.hpp  output.hpp  process.hpp  ring_buffer.hpp  session.hpp  swapper.hpp
runtime/lib/: function.cpp  messages.cpp  output.cpp  process.cpp  session.cpp  swapper.cpp
runtime/local-memory/: cache.cpp  cache.hpp  cli.cpp  connections.hpp  messages.hpp  opts.cpp  opts.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp
runtime/process/: cli.cpp  opts.cpp  opts.hpp
system/common/: messages.cpp  messages.hpp
system/control-plane/: backend.cpp  backend.hpp  cli.cpp  http.cpp  http.hpp  messages.cpp  messages.hpp  opts.cpp  resources.cpp  resources.hpp  server.cpp  server.hpp  worker.cpp  worker.hpp
system/local-worker/: cli.cpp  opts.cpp  request.hpp  server.cpp  server.hpp
system/praas-serving/: cli.cpp  opts.cpp  server.cpp  server.hpp  subprocess.cpp  subprocess.hpp
